--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "@maxmattone/code-export-browserstack-mocha": "file:../code-export-browserstack-mocha",
     "cli-logger": "^0.5.40",
     "js-yaml": "^4.1.0",
-    "winston": "^3.3.3"
+    "mocha": "^9.0.1"
   }
 }
