--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@maxmattone/code-export-browserstack-mocha": "file:../code-export-browserstack-mocha",
+    "@maxmattone/code-export-browserstack-mocha": "^1.0.0",
     "cli-logger": "^0.5.40",
     "js-yaml": "^4.1.0",
     "mocha": "^9.0.1"
