--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,8 +15,10 @@
     "@maxmattone/code-export-browserstack-mocha": "^1.0.0",
     "cli-logger": "^0.5.40",
     "commander": "^8.0.0",
+    "glob": "^7.1.7",
     "js-yaml": "^4.1.0",
     "mocha": "^9.0.1",
+    "rimraf": "^3.0.2",
     "selenium-webdriver": "^4.0.0-beta.4"
   }
 }
