--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "description": "",
   "dependencies": {
     "@maxmattone/code-export-browserstack-mocha": "^1.0.0",
+    "@mochajs/json-file-reporter": "^1.3.0",
     "cli-logger": "^0.5.40",
     "commander": "^8.0.0",
     "glob": "^7.1.7",
     "js-yaml": "^4.1.0",
     "mocha": "^9.0.1",
+    "mocha-multi-reporters": "^1.5.1",
     "rimraf": "^3.0.2",
     "selenium-webdriver": "^4.0.0-beta.4"
   }
