--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,7 @@
     "js-yaml": "^4.1.0",
     "mocha": "^9.0.1",
     "mocha-multi-reporters": "^1.5.1",
+    "rfdc": "^1.3.0",
     "rimraf": "^3.0.2",
     "selenium-webdriver": "^4.0.0-beta.4"
   }
