--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
-  "version": "1.2.3",
+  "repository": "git@github.com:mattonem/browserstack-side-runner.git",
+  "version": "1.2.4",
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
