--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "commander": "^8.0.0",
     "glob": "^7.1.7",
     "js-yaml": "^4.1.0",
-    "mocha": "^9.0.1",
+    "mocha": "^8.4.0",
     "mocha-multi-reporters": "^1.5.1",
     "rfdc": "^1.3.0",
     "rimraf": "^3.0.2",
-    "selenium-webdriver": "^4.0.0-beta.4"
+    "selenium-webdriver": "^4.1.1"
   }
 }
