--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
   "repository": "git@github.com:mattonem/browserstack-side-runner.git",
-  "version": "1.2.5-beta.0",
+  "version": "1.3.0-beta.1",
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@maxmattone/code-export-browserstack-mocha": "^1.0.0",
+    "@maxmattone/code-export-browserstack-mocha": "^1.1.0-beta.1",
     "@mochajs/json-file-reporter": "^1.3.0",
     "cli-logger": "^0.5.40",
     "commander": "^8.0.0",
