--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "repository": "git@github.com:mattonem/browserstack-side-runner.git",
   "version": "1.3.0-beta.5",
   "main": "index.mjs",
+  "homepage": "https://github.com/mattonem/browserstack-side-runner#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mattonem/browserstack-side-runner.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
