--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
   "repository": "git@github.com:mattonem/browserstack-side-runner.git",
-  "version": "1.3.0",
+  "version": "1.4.beta-0",
   "main": "index.mjs",
   "homepage": "https://github.com/mattonem/browserstack-side-runner#readme",
   "repository": {
@@ -18,7 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@maxmattone/code-export-browserstack-mocha": "^1.1.0",
+    "@maxmattone/code-export-browserstack-mocha": "^1.2.beta-0",
     "@mochajs/json-file-reporter": "^1.3.0",
     "cli-logger": "^0.5.40",
     "commander": "^8.0.0",
