--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@maxmattone/browserstack-side-runner",
-  "repository": "git@github.com:mattonem/browserstack-side-runner.git",
-  "version": "1.5.0",
-  "main": "index.mjs",
-  "homepage": "https://github.com/mattonem/browserstack-side-runner#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mattonem/browserstack-side-runner.git"
   },
+  "version": "2.0.0-beta.0",
+  "main": "index.mjs",
+  "homepage": "https://github.com/mattonem/browserstack-side-runner#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +19,7 @@
   "dependencies": {
     "@maxmattone/code-export-browserstack-mocha": "^1.2.0",
     "@mochajs/json-file-reporter": "^1.3.0",
+    "browserstack-node-sdk": "^1.6.2",
     "cli-logger": "^0.5.40",
     "commander": "^8.0.0",
     "glob": "^7.1.7",
