--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@maxmattone/code-export-browserstack-mocha": "^1.2.0",
+    "@maxmattone/code-export-browserstack-mocha": "^2.0.0-beta.0",
     "@mochajs/json-file-reporter": "^1.3.0",
     "browserstack-node-sdk": "^1.6.2",
     "cli-logger": "^0.5.40",
